src/main/java/com/simile/antlr/cypher/CypherParser.java
// Generated from /Users/haizhi/Documents/workspace/work/plan-antlr/src/main/resources/antlr/cypher/CypherParser.g4 by ANTLR 4.13.2
package com.simile.antlr.cypher;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class CypherParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ASSIGN=1, ADD_ASSIGN=2, LE=3, GE=4, GT=5, LT=6, NOT_EQUAL=7, RANGE=8, 
		SEMI=9, DOT=10, COMMA=11, LPAREN=12, RPAREN=13, LBRACE=14, RBRACE=15, 
		LBRACK=16, RBRACK=17, SUB=18, PLUS=19, DIV=20, MOD=21, CARET=22, MULT=23, 
		ESC=24, COLON=25, STICK=26, DOLLAR=27, CALL=28, YIELD=29, FILTER=30, EXTRACT=31, 
		COUNT=32, ANY=33, NONE=34, SINGLE=35, ALL=36, ASC=37, ASCENDING=38, BY=39, 
		CREATE=40, DELETE=41, DESC=42, DESCENDING=43, DETACH=44, EXISTS=45, LIMIT=46, 
		MATCH=47, MERGE=48, ON=49, OPTIONAL=50, ORDER=51, REMOVE=52, RETURN=53, 
		SET=54, SKIP_W=55, WHERE=56, WITH=57, UNION=58, UNWIND=59, AND=60, AS=61, 
		CONTAINS=62, DISTINCT=63, ENDS=64, IN=65, IS=66, NOT=67, OR=68, STARTS=69, 
		XOR=70, FALSE=71, TRUE=72, NULL_W=73, CONSTRAINT=74, DO=75, FOR=76, REQUIRE=77, 
		UNIQUE=78, CASE=79, WHEN=80, THEN=81, ELSE=82, END=83, MANDATORY=84, SCALAR=85, 
		OF=86, ADD=87, DROP=88, ID=89, ESC_LITERAL=90, CHAR_LITERAL=91, STRING_LITERAL=92, 
		DIGIT=93, FLOAT=94, WS=95, COMMENT=96, LINE_COMMENT=97, ERRCHAR=98, LetterOrDigit=99, 
		Letter=100, RANGE_LIT=101;
	public static final int
		RULE_script = 0, RULE_query = 1, RULE_regularQuery = 2, RULE_singleQuery = 3, 
		RULE_standaloneCall = 4, RULE_subCall = 5, RULE_returnSt = 6, RULE_withSt = 7, 
		RULE_skipSt = 8, RULE_limitSt = 9, RULE_projectionBody = 10, RULE_projectionItems = 11, 
		RULE_projectionItem = 12, RULE_orderItem = 13, RULE_orderSt = 14, RULE_singlePartQ = 15, 
		RULE_multiPartQ = 16, RULE_matchSt = 17, RULE_unwindSt = 18, RULE_readingStatement = 19, 
		RULE_updatingStatement = 20, RULE_deleteSt = 21, RULE_removeSt = 22, RULE_removeItem = 23, 
		RULE_queryCallSt = 24, RULE_parenExpressionChain = 25, RULE_yieldItems = 26, 
		RULE_yieldItem = 27, RULE_mergeSt = 28, RULE_mergeAction = 29, RULE_setSt = 30, 
		RULE_setItem = 31, RULE_nodeLabels = 32, RULE_createSt = 33, RULE_patternWhere = 34, 
		RULE_where = 35, RULE_pattern = 36, RULE_expression = 37, RULE_xorExpression = 38, 
		RULE_andExpression = 39, RULE_notExpression = 40, RULE_comparisonExpression = 41, 
		RULE_comparisonSigns = 42, RULE_addSubExpression = 43, RULE_multDivExpression = 44, 
		RULE_powerExpression = 45, RULE_unaryAddSubExpression = 46, RULE_atomicExpression = 47, 
		RULE_listExpression = 48, RULE_stringExpression = 49, RULE_stringExpPrefix = 50, 
		RULE_nullExpression = 51, RULE_propertyOrLabelExpression = 52, RULE_propertyExpression = 53, 
		RULE_patternPart = 54, RULE_patternElem = 55, RULE_patternElemChain = 56, 
		RULE_properties = 57, RULE_nodePattern = 58, RULE_atom = 59, RULE_lhs = 60, 
		RULE_relationshipPattern = 61, RULE_relationDetail = 62, RULE_relationshipTypes = 63, 
		RULE_unionSt = 64, RULE_subqueryExist = 65, RULE_invocationName = 66, 
		RULE_functionInvocation = 67, RULE_parenthesizedExpression = 68, RULE_filterWith = 69, 
		RULE_patternComprehension = 70, RULE_relationshipsChainPattern = 71, RULE_listComprehension = 72, 
		RULE_filterExpression = 73, RULE_countAll = 74, RULE_expressionChain = 75, 
		RULE_caseExpression = 76, RULE_parameter = 77, RULE_literal = 78, RULE_rangeLit = 79, 
		RULE_boolLit = 80, RULE_numLit = 81, RULE_stringLit = 82, RULE_charLit = 83, 
		RULE_listLit = 84, RULE_mapLit = 85, RULE_mapPair = 86, RULE_name = 87, 
		RULE_symbol = 88, RULE_reservedWord = 89;
	private static String[] makeRuleNames() {
		return new String[] {
			"script", "query", "regularQuery", "singleQuery", "standaloneCall", "subCall", 
			"returnSt", "withSt", "skipSt", "limitSt", "projectionBody", "projectionItems", 
			"projectionItem", "orderItem", "orderSt", "singlePartQ", "multiPartQ", 
			"matchSt", "unwindSt", "readingStatement", "updatingStatement", "deleteSt", 
			"removeSt", "removeItem", "queryCallSt", "parenExpressionChain", "yieldItems", 
			"yieldItem", "mergeSt", "mergeAction", "setSt", "setItem", "nodeLabels", 
			"createSt", "patternWhere", "where", "pattern", "expression", "xorExpression", 
			"andExpression", "notExpression", "comparisonExpression", "comparisonSigns", 
			"addSubExpression", "multDivExpression", "powerExpression", "unaryAddSubExpression", 
			"atomicExpression", "listExpression", "stringExpression", "stringExpPrefix", 
			"nullExpression", "propertyOrLabelExpression", "propertyExpression", 
			"patternPart", "patternElem", "patternElemChain", "properties", "nodePattern", 
			"atom", "lhs", "relationshipPattern", "relationDetail", "relationshipTypes", 
			"unionSt", "subqueryExist", "invocationName", "functionInvocation", "parenthesizedExpression", 
			"filterWith", "patternComprehension", "relationshipsChainPattern", "listComprehension", 
			"filterExpression", "countAll", "expressionChain", "caseExpression", 
			"parameter", "literal", "rangeLit", "boolLit", "numLit", "stringLit", 
			"charLit", "listLit", "mapLit", "mapPair", "name", "symbol", "reservedWord"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'+='", "'<='", "'>='", "'>'", "'<'", "'<>'", "'..'", "';'", 
			"'.'", "','", "'('", "')'", "'{'", "'}'", "'['", "']'", "'-'", "'+'", 
			"'/'", "'%'", "'^'", "'*'", "'`'", "':'", "'|'", "'$'", "'CALL'", "'YIELD'", 
			"'FILTER'", "'EXTRACT'", "'COUNT'", "'ANY'", "'NONE'", "'SINGLE'", "'ALL'", 
			"'ASC'", "'ASCENDING'", "'BY'", "'CREATE'", "'DELETE'", "'DESC'", "'DESCENDING'", 
			"'DETACH'", "'EXISTS'", "'LIMIT'", "'MATCH'", "'MERGE'", "'ON'", "'OPTIONAL'", 
			"'ORDER'", "'REMOVE'", "'RETURN'", "'SET'", "'SKIP'", "'WHERE'", "'WITH'", 
			"'UNION'", "'UNWIND'", "'AND'", "'AS'", "'CONTAINS'", "'DISTINCT'", "'ENDS'", 
			"'IN'", "'IS'", "'NOT'", "'OR'", "'STARTS'", "'XOR'", "'FALSE'", "'TRUE'", 
			"'NULL'", "'CONSTRAINT'", "'DO'", "'FOR'", "'REQUIRE'", "'UNIQUE'", "'CASE'", 
			"'WHEN'", "'THEN'", "'ELSE'", "'END'", "'MANDATORY'", "'SCALAR'", "'OF'", 
			"'ADD'", "'DROP'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ASSIGN", "ADD_ASSIGN", "LE", "GE", "GT", "LT", "NOT_EQUAL", "RANGE", 
			"SEMI", "DOT", "COMMA", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", 
			"RBRACK", "SUB", "PLUS", "DIV", "MOD", "CARET", "MULT", "ESC", "COLON", 
			"STICK", "DOLLAR", "CALL", "YIELD", "FILTER", "EXTRACT", "COUNT", "ANY", 
			"NONE", "SINGLE", "ALL", "ASC", "ASCENDING", "BY", "CREATE", "DELETE", 
			"DESC", "DESCENDING", "DETACH", "EXISTS", "LIMIT", "MATCH", "MERGE", 
			"ON", "OPTIONAL", "ORDER", "REMOVE", "RETURN", "SET", "SKIP_W", "WHERE", 
			"WITH", "UNION", "UNWIND", "AND", "AS", "CONTAINS", "DISTINCT", "ENDS", 
			"IN", "IS", "NOT", "OR", "STARTS", "XOR", "FALSE", "TRUE", "NULL_W", 
			"CONSTRAINT", "DO", "FOR", "REQUIRE", "UNIQUE", "CASE", "WHEN", "THEN", 
			"ELSE", "END", "MANDATORY", "SCALAR", "OF", "ADD", "DROP", "ID", "ESC_LITERAL", 
			"CHAR_LITERAL", "STRING_LITERAL", "DIGIT", "FLOAT", "WS", "COMMENT", 
			"LINE_COMMENT", "ERRCHAR", "LetterOrDigit", "Letter", "RANGE_LIT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CypherParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CypherParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScriptContext extends ParserRuleContext {
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CypherParser.EOF, 0); }
		public TerminalNode SEMI() { return getToken(CypherParser.SEMI, 0); }
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).enterScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).exitScript(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CypherParserVisitor ) return ((CypherParserVisitor<? extends T>)visitor).visitScript(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180);
			query();
			setState(182);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMI) {
				{
				setState(181);
				match(SEMI);
				}
			}

			setState(184);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QueryContext extends ParserRuleContext {
		public RegularQueryContext regularQuery() {
			return getRuleContext(RegularQueryContext.class,0);
		}
		public StandaloneCallContext standaloneCall() {
			return getRuleContext(StandaloneCallContext.class,0);
		}
		public SubCallContext subCall() {
			return getRuleContext(SubCallContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).exitQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CypherParserVisitor ) return ((CypherParserVisitor<? extends T>)visitor).visitQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_query);
		try {
			setState(189);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(186);
				regularQuery();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(187);
				standaloneCall();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(188);
				subCall();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RegularQueryContext extends ParserRuleContext {
		public SingleQueryContext singleQuery() {
			return getRuleContext(SingleQueryContext.class,0);
		}
		public List<UnionStContext> unionSt() {
			return getRuleContexts(UnionStContext.class);
		}
		public UnionStContext unionSt(int i) {
			return getRuleContext(UnionStContext.class,i);
		}
		public RegularQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regularQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).enterRegularQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).exitRegularQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CypherParserVisitor ) return ((CypherParserVisitor<? extends T>)visitor).visitRegularQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RegularQueryContext regularQuery() throws RecognitionException {
		RegularQueryContext _localctx = new RegularQueryContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_regularQuery);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(191);
			singleQuery();
			setState(195);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==UNION) {
				{
				{
				setState(192);
				unionSt();
				}
				}
				setState(197);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SingleQueryContext extends ParserRuleContext {
		public SinglePartQContext singlePartQ() {
			return getRuleContext(SinglePartQContext.class,0);
		}
		public MultiPartQContext multiPartQ() {
			return getRuleContext(MultiPartQContext.class,0);
		}
		public SingleQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singleQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).enterSingleQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).exitSingleQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CypherParserVisitor ) return ((CypherParserVisitor<? extends T>)visitor).visitSingleQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SingleQueryContext singleQuery() throws RecognitionException {
		SingleQueryContext _localctx = new SingleQueryContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_singleQuery);
		try {
			setState(200);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(198);
				singlePartQ();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(199);
				multiPartQ();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StandaloneCallContext extends ParserRuleContext {
		public TerminalNode CALL() { return getToken(CypherParser.CALL, 0); }
		public InvocationNameContext invocationName() {
			return getRuleContext(InvocationNameContext.class,0);
		}
		public ParenExpressionChainContext parenExpressionChain() {
			return getRuleContext(ParenExpressionChainContext.class,0);
		}
		public TerminalNode YIELD() { return getToken(CypherParser.YIELD, 0); }
		public TerminalNode MULT() { return getToken(CypherParser.MULT, 0); }
		public YieldItemsContext yieldItems() {
			return getRuleContext(YieldItemsContext.class,0);
		}
		public StandaloneCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_standaloneCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).enterStandaloneCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).exitStandaloneCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CypherParserVisitor ) return ((CypherParserVisitor<? extends T>)visitor).visitStandaloneCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StandaloneCallContext standaloneCall() throws RecognitionException {
		StandaloneCallContext _localctx = new StandaloneCallContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_standaloneCall);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(202);
			match(CALL);
			setState(203);
			invocationName();
			setState(205);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(204);
				parenExpressionChain();
				}
			}

			setState(212);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==YIELD) {
				{
				setState(207);
				match(YIELD);
				setState(210);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case MULT:
					{
					setState(208);
					match(MULT);
					}
					break;
				case FILTER:
				case EXTRACT:
				case COUNT:
				case ANY:
				case NONE:
				case SINGLE:
				case ID:
				case ESC_LITERAL:
					{
					setState(209);
					yieldItems();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SubCallContext extends ParserRuleContext {
		public TerminalNode CALL() { return getToken(CypherParser.CALL, 0); }
		public TerminalNode LBRACE() { return getToken(CypherParser.LBRACE, 0); }
		public List<QueryContext> query() {
			return getRuleContexts(QueryContext.class);
		}
		public QueryContext query(int i) {
			return getRuleContext(QueryContext.class,i);
		}
		public TerminalNode RBRACE() { return getToken(CypherParser.RBRACE, 0); }
		public SubCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).enterSubCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CypherParserListener ) ((CypherParserListener)listener).exitSubCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CypherParserVisitor ) return ((CypherParserVisitor<? extends T>)visitor).visitSubCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SubCallContext subCall() throws RecognitionException {
		SubCallContext _localctx = new SubCallContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_subCall);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(214);
			match(CALL);
			setState(215);
			match(LBRACE);
			setState(216);
			query();
			setState(217);
			match(RBRACE);
			setState(218);
			query();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
